// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering renders expected elements when active is true 1`] = `
<button
  className="Button Button--medium Button--active"
  data-bcn-id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when both size is small and disabled is true 1`] = `
<span
  aria-disabled="true"
  className="Button Button--small"
  data-bcn-id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when className is set 1`] = `
<button
  className="Button Button--medium testClass"
  data-bcn-id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when disabled is true 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium"
  data-bcn-id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when disabled is true and className is set 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium testClass"
  data-bcn-id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when onClick is not specified 1`] = `
<button
  className="Button Button--medium"
  data-bcn-id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when onClick is specified 1`] = `
<button
  className="Button Button--medium"
  data-bcn-id="test"
  onClick={[MockFunction]}
  type="button"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when size is small 1`] = `
<button
  className="Button Button--small"
  data-bcn-id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when tooltipText is set 1`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="tooltip-test"
    >
      Tooltip
    </Tooltip>
  }
  placement="top"
>
  <button
    className="Button Button--medium"
    data-bcn-id="test"
    type="submit"
  >
    Test
  </button>
</OverlayTrigger>
`;
